--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Uploader X Bot",
-  "description": "Telegram Bot to Upload URLs to Telegram as File and Video.",
+  "name": "Zee5 Bot",
+  "description": "Telegram Bot to Upload Zee5 Url to Telegram as File and Video.",
   "keywords": [
     "telegram",
     "best",
