--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zee5 Bot",
+  "name": "Uploader Bot",
   "description": "Telegram Bot to Upload Zee5 Url to Telegram as File and Video.",
   "keywords": [
     "telegram",
