--- a/app.json
+++ b/app.json
@@ -54,6 +54,11 @@
       "description": "proxy for accessing youtube-dl in GeoRestricted Areas. Get your own proxy from https://github.com/rg3/youtube-dl/issues/1091#issuecomment-230163061",
       "value": "",
       "required": false
+    },
+    "UPDATES_CHANNEL": {
+      "description": "Your Updates Channel ID To ForceSub , Must Add Bots As Admin in Update Channel",
+      "value": "",
+      "required": false
     }
   },
   "addons": [
