--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ dnspython
 psutil
 pyrogram
 tgcrypto
-brew upgrade yt-dlp/taps/yt-dlp
+python3 -m pip install --force-reinstall https://github.com/yt-dlp/yt-dlp/archive/master.zip
